# embanalysis

./: .gitignore  .pre-commit-config.yaml  00_papermill_template.ipynb  README.md  df.csv  pyproject.toml
pandoc_presentation/: Makefile  presentation.html  presentation.md
src/embanalysis/: analyzer.py  cli.py  component_analyzer.py  constants.py  duckdb_loader.py  extractor.py  feature_analysis.py  feature_analyzer.py  fibonacci_analyzer.py  marimo_analyzer.py  marimo_utils.py  number_utils.py  plots.py  sample_data.py  sampler.py  tokenizer.py  utils.py  visualizer.py
src/embanalysis/utils/: plot.py
src/marimo/: main_analysis.py  presentation.py  presentation2.py
src/marimo/__marimo__/: presentation.html
thesis/: .gitignore  Makefile  _quarto.yml  index.qmd
thesis/src/: 00-meta.yaml  01-intro.md  01-intro.qmd  02-implementation.md  02-implementation.qmd  03-analysis.md  04-analysis.md  04-analysis.qmd  99-bibliography.md  bibliography.bib  frontmatter.tex  header.tex
