[project]
name = "embanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "marimo>=0.13.0",
    "transformers>=4.50.1",
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "papermill>=2.6.0",
    "pygwalker>=0.4.9.15",
    "jupytext>=1.17.2",
    "altair>=5.5.0",
    "umap-learn>=0.5.7",
    "typer>=0.16.0",
    "vl-convert-python>=1.8.0",
    "sympy>=1.13.1",
    "toolz>=1.0.0",
    "vegafusion[embed]>=2.0.2",
    "plotly>=6.2.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[project.scripts]
embcli = "embanalysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embanalysis"]

[tool.marimo.runtime]
output_max_bytes = 1_000_000_000

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs" }

[tool.basedpyright]
typeCheckingMode = "standard"
